# VideoDownloader

./: .gitignore  README.md  build.gradle  gradle.properties  in.bat  push.bat  settings.gradle
Notes/: Android.md  C++.md  CMakeLists.md  FFmpeg.md  Git.md  NDK.md
app/: build.gradle  google-services.json
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: encode.js  index.css  index.html  index.js  qqmusic.js  video.js  youtube.js
app/src/main/cpp/: AcFun.cpp  AcFun.h  CMakeLists.txt  Ck57.cpp  Ck57.h  Configuration.h  DouYin.cpp  DouYin.h  HAL_TCP_linux.h  HttpUtils.cpp  HttpUtils.h  Iqiyi.cpp  Iqiyi.h  KuaiShou.cpp  KuaiShou.h  Logger.cpp  Logger.h  MangoTV.cpp  MangoTV.h  Porn91.cpp  Porn91.h  PornOne.cpp  PornOne.h  Shared.cpp  Shared.h  XVideos.cpp  XVideos.h  cJSON.c  cJSON.h  def.h  hello-libs.cpp  http.h  https.c  https.h  log.h  main.c  native-lib.c  porn91.h  share.h  str.h  (+3 more)
app/src/main/cpp/httplib/: httplib.cc  httplib.h
app/src/main/cpp/mbedtls/tests/: CMakeLists.txt
app/src/main/cpp/mbedtls/tests/suites/: test_suite_pk.function
app/src/main/java/at/huber/youtubeExtractor/: Format.java  VideoMeta.java  YouTubeExtractor.java  YtFile.java
app/src/main/java/com/cocosw/bottomsheet/: BottomSheet.java  BottomSheetHelper.java
app/src/main/java/euphoria/psycho/: BilibiliPlayerActivity.java  Create_log_file_failed.java  LifeCycle.java  NetworkDispatcher.java  PlayerActivity.java  PlayerUtils.java  Request.java  RequestQueue.java  SimplePlayerControlView.java  SimplePlayerControlViewLayoutManager.java  SimplePlayerView.java  SimpleTimeBar.java  TaskStatus.java  VideoActivity.java  VideoAdapter.java  VideoManager.java  VideoService.java  VideoTask.java  VideoTaskDatabase.java  VideoTaskListener.java  ViewHolder.java
app/src/main/java/euphoria/psycho/bilibili/: Bilibili.java  BilibiliDatabase.java  BilibiliService.java  BilibiliStatus.java  BilibiliTask.java  BilibiliThread.java  BilibiliUtils.java
app/src/main/java/euphoria/psycho/downloader/: DownloadManager.java  DownloadTask.java  DownloadTaskDatabase.java  DownloaderActivity.java  DownloaderAdapter.java  DownloaderHelper.java  DownloaderManager.java  DownloaderRequest.java  DownloaderService.java  DownloaderTask.java  JavaScriptInterface.java  LifeCycle.java  NetworkDispatcher.java  Request.java  RequestQueue.java  TaskStatus.java  VideoAdapter.java  VideoHelper.java  VideoService.java  VideoTaskListener.java  ViewHolder.java
app/src/main/java/euphoria/psycho/explorer/: AcFunShare.java  App.java  BlobCache.java  BookmarkActivity.java  BookmarkDatabase.java  ClientInterface.java  CommonControllerOverlay.java  ControllerOverlay.java  CustomWebChromeClient.java  CustomWebViewClient.java  DouYinShare.java  DownloadActivity.java  DownloadNotifier.java  DownloadService.java  DownloadTaskDatabase.java  DownloadTasks.java  DownloadThread.java  Helper.java  HttpUtils.java  IqiyiShare.java  JavaScriptInterface.java  ListenerDelegate.java  M3u8Share.java  MainActivity.java  MovieActivity.java  MovieControllerOverlay.java  MoviePlayer.java  Native.java  NativeShare.java  Porn91Share.java  SampleDownloadActivity.java  SettingsActivity.java  SettingsFragment.java  Share.java  SquareFrameLayout.java  SquareImageView.java  TimeBar.java  UpdateUtils.java  VideoAdapter.java  VideoListActivity.java  (+3 more)
app/src/main/java/euphoria/psycho/player/: AspectRatioFrameLayout.java  BaseVideoActivity.java  BilibiliActivity.java  Bookmarker.java  DefaultTimeBar.java  FileItem.java  FileItemComparator.java  IqiyiActivity.java  PlayerActivity.java  PlayerHelper.java  SimplePlayerControlView.java  SimplePlayerControlViewLayoutManager.java  SimplePlayerView.java  SubtitlePainter.java  SubtitleView.java  TencentActivity.java  TextureVideoView.java  TimeBar.java  Utils.java  VideoActivity.java  VideoTouchHelper.java
app/src/main/java/euphoria/psycho/share/: ArrayShare.java  BitmapShare.java  ColorShare.java  ContextShare.java  DateTimeShare.java  DialogShare.java  DownloadThread.java  DownloadThreadShare.java  FileShare.java  IntentShare.java  KeyShare.java  Logger.java  MathShare.java  NativeShare.java  NetShare.java  ObjectShare.java  PackageShare.java  PermissionShare.java  PreferenceShare.java  StringShare.java  ThreadShare.java  VideoShare.java  WebViewShare.java  XVideosShare.java  (+1 more)
app/src/main/res/drawable/: btn.xml
app/src/main/res/layout/: activity_hls_download.xml  activity_iqiyi.xml  activity_main.xml  activity_player.xml  activity_sample_download.xml  activity_video.xml  activity_video_list.xml  activity_video_s.xml  activity_web.xml  bookmark_layout.xml  bookmark_row.xml  download_activity.xml  download_item.xml  exo_styled_player_control_view.xml  exo_styled_player_view.xml  hls_download_item.xml  movie_view.xml  player_activity.xml  video_item.xml  video_row.xml
app/src/main/res/menu/: browser.xml  list.xml  movie.xml  videos.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: settings.xml
ffmpeglib/: build.gradle
ffmpeglib/src/main/: AndroidManifest.xml
ffmpeglib/src/main/cpp/: CMakeLists.txt  android_log.h  config.h  ffmpeg_cmd.cpp  ffmpeg_info.cpp  ffmpeg_options_const.h  fftools_cmdutils.c  fftools_cmdutils.h  fftools_ffmpeg.c  fftools_ffmpeg.h  fftools_ffmpeg_filter.c  fftools_ffmpeg_hw.c  fftools_ffmpeg_opt.c  jeffmony_log.h  process_error.h  video_composite.cpp  video_composite.h  video_jni.cpp  video_jni_env.cpp  video_jni_env.h  video_processor.cpp
ffmpeglib/src/main/cpp/libavcodec/: avcodec.h  mathops.h
ffmpeglib/src/main/cpp/libavfilter/: avfilter.h  buffersink.h
ffmpeglib/src/main/cpp/libavformat/: avformat.h  avio.h  os_support.h
ffmpeglib/src/main/cpp/libavutil/: attributes.h  avutil.h  common.h  encryption_info.h  ffversion.h  frame.h  hash.h  hwcontext.h  internal.h  intreadwrite.h  libm.h  log.h  mem.h  murmur3.h  opt.h  pixdesc.h  pixfmt.h  ripemd.h  thread.h
ffmpeglib/src/main/cpp/libpostproc/: postprocess.h
gradle/wrapper/: gradle-wrapper.properties
(+86 files in other folders)
